--- a/resume.html
+++ b/resume.html
@@ -56,7 +56,7 @@
                             <!-- Note: Set the link href target to a PDF file within your project-->
                             <a class="btn btn-primary px-4 py-3" href="/assets/Ben_Glass_Online_Resume.pdf">
                                 <div class="d-inline-block bi bi-download me-2"></div>
-                                Download Resume
+                                Open Resume
                             </a>
                         </div>
                         <!-- Experience Card 1-->
