--- a/index.html
+++ b/index.html
@@ -375,8 +375,8 @@
                                 dolorum itaque qui unde quisquam consequatur autem. Eveniet quasi nobis aliquid cumque
                                 officiis sed rem iure ipsa! Praesentium ratione atque dolorem?</p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
-                                <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a>
-                                <a class="text-gradient" href="#!"><i class="bi bi-linkedin"></i></a>
+                                <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
+                                <a class="text-gradient" href="www.linkedin.com/in/ben-glass-3a770029b"><i class="bi bi-linkedin"></i></a>
                                 <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
                             </div>
                         </div>
