Update front page
Make the front page more personal

--- a/index.html
+++ b/index.html
@@ -49,11 +49,10 @@
                         <!-- Header text content-->
                         <div class="text-center text-xxl-start">
                             <div class="badge bg-gradient-primary-to-secondary text-white mb-4">
-                                <div class="text-uppercase">Fill &middot; in &middot; later</div>
+                                <div class="text-uppercase">Programmer &middot; Leader &middot; Collaborator</div>
                             </div>
                             <div class="fs-3 fw-light text-muted">Computer Science Student</div>
-                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Fill in with
-                                    something good</span></h1>
+                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Let's Get To Work!</span></h1>
                             <div
                                 class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                 <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder"
@@ -371,13 +370,14 @@
                             <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                             <p class="lead fw-light mb-4">My name is Ben Glass and I study computer science at James
                                 Madison University.</p>
-                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugit
-                                dolorum itaque qui unde quisquam consequatur autem. Eveniet quasi nobis aliquid cumque
-                                officiis sed rem iure ipsa! Praesentium ratione atque dolorem?</p>
+                            <p class="text-muted">Throughout my studies I have gained many technical skills, including but not limited to, algorithm conceptualization, systems programming, and collaborative software engineering.
+                                As an intern, I have learned practical skills pertaining to working on teams and thriving in a corporate setting. I provide quality work with an attention to detail and and emphasis on the big picture.
+                                I look forward to working with you!
+                            </p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
                                 <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
-                                <a class="text-gradient" href="www.linkedin.com/in/ben-glass-3a770029b"><i class="bi bi-linkedin"></i></a>
-                                <a class="text-gradient" href="#!"><i class="bi bi-github"></i></a>
+                                <a class="text-gradient" href="https://www.linkedin.com/in/ben-glass-3a770029b"><i class="bi bi-linkedin"></i></a>
+                                <a class="text-gradient" href="https://github.com/BenGlass6/BenGlass6.github.io.git"><i class="bi bi-github"></i></a>
                             </div>
                         </div>
                     </div>
