add research to summary
title

--- a/index.html
+++ b/index.html
@@ -372,6 +372,7 @@
                             <p class="lead fw-light mb-4">My name is Ben Glass and I study computer science at James
                                 Madison University.</p>
                             <p class="text-muted">Throughout my studies I have gained many technical skills, including but not limited to, algorithm conceptualization, systems programming, and collaborative software engineering.
+                                As a research assistant, I have applied machine-learning and statistical concepts to cluster and study weather patterns over cites across the country.
                                 As an intern, I have learned practical skills pertaining to working on teams and thriving in a corporate setting. I provide quality work with an attention to detail and and emphasis on the big picture.
                                 I look forward to working with you!
                             </p>
