--- a/resume.html
+++ b/resume.html
@@ -80,7 +80,7 @@
                                             systems (UAS) used for experimental
                                             demonstrations and reconnaissance drills. <br><br>
                                             • Iteratively designed and revised three dimensional designs to be printed
-                                            and used for projects, experiments, and valuegenerating activities.</div>
+                                            and used for projects, experiments, and value-generating activities.</div>
                                     </div>
                                 </div>
                             </div>
