--- a/resume.html
+++ b/resume.html
@@ -131,10 +131,7 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-8">
-                                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus
-                                            laudantium, voluptatem quis repellendus eaque sit animi illo ipsam amet
-                                            officiis corporis sed aliquam non voluptate corrupti excepturi maxime porro
-                                            fuga.</div>
+                                        <div>Major: Computer Science <br>Minor: General Business<br>Expected Graduation: May 2026<br>GPA: 3.85</div>
                                     </div>
                                 </div>
                             </div>
