Begin adding project details

--- a/projects.html
+++ b/projects.html
@@ -54,13 +54,14 @@
                             <div class="card-body p-0">
                                 <div class="d-flex align-items-center">
                                     <div class="p-5">
-                                        <h2 class="fw-bolder">Project Name 1</h2>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum
-                                            illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero,
-                                            iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                        <h2 class="fw-bolder">Movie Social Media Website</h2>
+                                        <p>• A complex movie-review-based social media website. <br>
+                                            • Users can create customized profiles, review movies, interact with other
+                                            profiles, and see other’s reviews.<br>
+                                            • Relies on storing and retrieving data from multiple databases.<br>
+                                            • Created in a team using the SCRUM engineering framework.<br></p>
                                     </div>
-                                    <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d"
-                                        alt="..." />
+                                    <img class="img-fluid" src="/assets/jmuvies_screenshot.png" alt="..." />
                                 </div>
                             </div>
                         </div>
@@ -69,13 +70,19 @@
                             <div class="card-body p-0">
                                 <div class="d-flex align-items-center">
                                     <div class="p-5">
-                                        <h2 class="fw-bolder">Project Name 2</h2>
-                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius at enim eum
-                                            illum aperiam placeat esse? Mollitia omnis minima saepe recusandae libero,
-                                            iste ad asperiores! Explicabo commodi quo itaque! Ipsam!</p>
+                                        <h2 class="fw-bolder">Network-Wide Ad Blocker</h2>
+                                        <p>• Implemented a network-wide DNS filter that uses a blacklist to block
+                                            requests from known advertisers.<br>
+                                            • Blocks most pop-ups and banner advertisements on any device connected to
+                                            the home network.<br>
+                                            • Effectively halved the amount of unnecessary content on the network,
+                                            freeing bandwidth for other processes.
+                                        </p>
                                     </div>
-                                    <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d"
-                                        alt="..." />
+                                    <img class="img-fluid" src="/assests/rasp.png"
+                                    alt="..." />
+                                    <!-- <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d"
+                                        alt="..." /> -->
                                 </div>
                             </div>
                         </div>
@@ -88,7 +95,8 @@
             <div class="container px-5 my-5">
                 <div class="text-center">
                     <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
-                    <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact me</a>
+                    <p>Contact me at: benglass60@gmail.com</p>
+                    <!-- <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact me</a> -->
                 </div>
             </div>
         </section>
