--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0 small fw-bolder">
                         <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="resume.html">Resume</a></li>
-                        <!-- <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li> -->
+                        <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
                         <!-- <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li> -->
                     </ul>
                 </div>
@@ -53,13 +53,14 @@
                                 <div class="text-uppercase">Programmer &middot; Leader &middot; Collaborator</div>
                             </div>
                             <div class="fs-3 fw-light text-muted">Computer Science Student</div>
-                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Let's Get To Work!</span></h1>
+                            <h1 class="display-3 fw-bolder mb-5"><span class="text-gradient d-inline">Let's Get To
+                                    Work!</span></h1>
                             <div
                                 class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xxl-start mb-3">
                                 <a class="btn btn-primary btn-lg px-5 py-3 me-sm-3 fs-6 fw-bolder"
                                     href="resume.html">Resume</a>
-                                <!-- <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"
-                                    href="projects.html">Projects</a> -->
+                                <a class="btn btn-outline-dark btn-lg px-5 py-3 fs-6 fw-bolder"
+                                    href="projects.html">Projects</a>
                             </div>
                         </div>
                     </div>
@@ -67,9 +68,6 @@
                         <!-- Header profile picture-->
                         <div class="d-flex justify-content-center mt-5 mt-xxl-0">
                             <div class="profile bg-gradient-primary-to-secondary">
-                                <!-- TIP: For best results, use a photo with a transparent background like the demo example below-->
-                                <!-- Watch a tutorial on how to do this on YouTube (link)-->
-                                <!-- <img class="profile-img" src="assets/profile.png" alt="..." /> -->
                                 <img class="profile-img" src="assets/headshot-cutout.png" alt="..." />
 
                                 <div class="dots-1">
@@ -371,15 +369,22 @@
                             <h2 class="display-5 fw-bolder"><span class="text-gradient d-inline">About Me</span></h2>
                             <p class="lead fw-light mb-4">My name is Ben Glass and I study computer science at James
                                 Madison University.</p>
-                            <p class="text-muted">Throughout my studies I have gained many technical skills, including but not limited to, algorithm conceptualization, systems programming, and collaborative software engineering.
-                                As a research assistant, I have applied machine-learning and statistical concepts to cluster and study weather patterns over cites across the country.
-                                As an intern, I have learned practical skills pertaining to working on teams and thriving in a corporate setting. I provide quality work with an attention to detail and and emphasis on the big picture.
+                            <p class="text-muted">Throughout my studies I have gained many technical skills, including
+                                but not limited to, algorithm conceptualization, systems programming, and collaborative
+                                software engineering.
+                                As a research assistant, I have applied machine-learning and statistical concepts to
+                                cluster and study weather patterns over cites across the country.
+                                As an intern, I have learned practical skills pertaining to working on teams and
+                                thriving in a corporate setting. I provide quality work with an attention to detail and
+                                and emphasis on the big picture.
                                 I look forward to working with you!
                             </p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
                                 <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
-                                <a class="text-gradient" href="https://www.linkedin.com/in/ben-glass-3a770029b"><i class="bi bi-linkedin"></i></a>
-                                <a class="text-gradient" href="https://github.com/BenGlass6/BenGlass6.github.io.git"><i class="bi bi-github"></i></a>
+                                <a class="text-gradient" href="https://www.linkedin.com/in/ben-glass-3a770029b"><i
+                                        class="bi bi-linkedin"></i></a>
+                                <a class="text-gradient" href="https://github.com/BenGlass6/BenGlass6.github.io.git"><i
+                                        class="bi bi-github"></i></a>
                             </div>
                         </div>
                     </div>
@@ -391,6 +396,7 @@
     <footer class="bg-white py-4 mt-auto">
         <div class="container px-5">
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                </div>
                 <!-- <div class="col-auto"><div class="small m-0">Copyright &copy; BenGlass.github.io 2024</div></div> -->
                 <div class="col-auto">
                     <!-- <a class="small" href="#!">Privacy</a>
@@ -398,6 +404,7 @@
                         <a class="small" href="#!">Terms</a>
                         <span class="mx-1">&middot;</span>
                         <a class="small" href="#!">Contact</a> -->
+                        <div class="text-center">Contact me at: benglass60@gmail.com</div>
                 </div>
             </div>
         </div>
