Add 3rd project

--- a/projects.html
+++ b/projects.html
@@ -66,7 +66,7 @@
                             </div>
                         </div>
                         <!-- Project Card 2-->
-                        <div class="card overflow-hidden shadow rounded-4 border-0">
+                        <div class="card overflow-hidden shadow rounded-4 border-0 mb-5">
                             <div class="card-body p-0">
                                 <div class="d-flex align-items-center">
                                     <div class="p-5">
@@ -79,10 +79,25 @@
                                             freeing bandwidth for other processes.
                                         </p>
                                     </div>
-                                    <img class="img-fluid" src="/assests/rasp.png"
-                                    alt="..." />
+                                    <img class="img-fluid" src="/assets/rasp.png" alt="..." />
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Project Card 3-->
+                        <div class="card overflow-hidden shadow rounded-4 border-0">
+                            <div class="card-body p-0">
+                                <div class="d-flex align-items-center">
+                                    <div class="p-5">
+                                        <h2 class="fw-bolder">Y86 Interpreter</h2>
+                                        <p>• Created an implementation of the Y86 architecture, a simplified form of the X86 instruction set, to emulate machine level processing.<br>
+                                            • Simulates virtual memory to be used for the Von Neumann architecture system.<br>
+                                            • Programmed functionality to read files, interpret headers, fetch instructions, handle memory operations, and execute machine code.<br>
+                                            • Implemented robust error handling to manage invalid instructions, ensuring stability and accuracy.
+                                        </p>
+                                    </div>
+                                    <img class="img-fluid" src="/assets/y86_example.png" alt="..." />
                                     <!-- <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d"
-                                        alt="..." /> -->
+                                                                alt="..." /> -->
                                 </div>
                             </div>
                         </div>
