Added more photos to the projects tab.

--- a/projects.html
+++ b/projects.html
@@ -61,8 +61,13 @@
                                             • Relies on storing and retrieving data from multiple databases.<br>
                                             • Created in a team using the SCRUM engineering framework.<br></p>
                                     </div>
-                                    <img class="img-fluid" src="/assets/jmuvies_screenshot.png" alt="..." />
+                                    <!-- <img class="img-fluid" src="/assets/jmuvies_screenshot.png" alt="..." /> -->
                                 </div>
+                                <div class="d-flex justify-content-center w-100">
+                                    <img class="img-fluid" src="/assets/jmuvies_screenshot.png" alt="..." />
+                                    <img class="img-fluid" src="/assets/jmdb_create.png" alt="..." />
+                                </div>
+
                             </div>
                         </div>
                         <!-- Project Card 2-->
@@ -79,7 +84,11 @@
                                             freeing bandwidth for other processes.
                                         </p>
                                     </div>
+                                    <!-- <img class="img-fluid" src="/assets/rasp.png" alt="..." /> -->
+                                </div>
+                                <div class="d-flex justify-content-center w-100">
                                     <img class="img-fluid" src="/assets/rasp.png" alt="..." />
+                                    <img class="img-fluid" src="/assets/DNS.png" alt="..." />
                                 </div>
                             </div>
                         </div>
@@ -95,9 +104,13 @@
                                             • Implemented robust error handling to manage invalid instructions, ensuring stability and accuracy.
                                         </p>
                                     </div>
-                                    <img class="img-fluid" src="/assets/y86_example.png" alt="..." />
+                                    <!-- <img class="img-fluid" src="/assets/y86_example.png" alt="..." /> -->
                                     <!-- <img class="img-fluid" src="https://dummyimage.com/300x400/343a40/6c757d"
                                                                 alt="..." /> -->
+                                </div>
+                                <div class="d-flex justify-content-center w-100">
+                                    <img class="img-fluid" src="/assets/y86_example.png" alt="..." />
+                                    <img class="img-fluid" src="/assets/decode_exe.png" alt="..." />
                                 </div>
                             </div>
                         </div>
