Fixed colors to be a consistent theme

--- a/projects.html
+++ b/projects.html
@@ -19,6 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
+
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
@@ -54,7 +55,7 @@
                             <div class="card-body p-0">
                                 <div class="d-flex align-items-center">
                                     <div class="p-5">
-                                        <h2 class="fw-bolder">Movie Social Media Website</h2>
+                                        <h2 class="text-primary fw-bolder d-inline">Movie Social Media Website</h2>
                                         <p>• A complex movie-review-based social media website. <br>
                                             • Users can create customized profiles, review movies, interact with other
                                             profiles, and see other’s reviews.<br>
@@ -75,7 +76,7 @@
                             <div class="card-body p-0">
                                 <div class="d-flex align-items-center">
                                     <div class="p-5">
-                                        <h2 class="fw-bolder">Network-Wide Ad Blocker</h2>
+                                        <h2 class="text-primary fw-bolder d-inline">Network-Wide Ad Blocker</h2>
                                         <p>• Implemented a network-wide DNS filter that uses a blacklist to block
                                             requests from known advertisers.<br>
                                             • Blocks most pop-ups and banner advertisements on any device connected to
@@ -97,11 +98,16 @@
                             <div class="card-body p-0">
                                 <div class="d-flex align-items-center">
                                     <div class="p-5">
-                                        <h2 class="fw-bolder">Y86 Interpreter</h2>
-                                        <p>• Created an implementation of the Y86 architecture, a simplified form of the X86 instruction set, to emulate machine level processing.<br>
-                                            • Simulates virtual memory to be used for the Von Neumann architecture system.<br>
-                                            • Programmed functionality to read files, interpret headers, fetch instructions, handle memory operations, and execute machine code.<br>
-                                            • Implemented robust error handling to manage invalid instructions, ensuring stability and accuracy.
+
+                                        <h2 class="text-primary fw-bolder d-inline">Y86 Interpreter</h2>
+                                        <p>• Created an implementation of the Y86 architecture, a simplified form of the
+                                            X86 instruction set, to emulate machine level processing.<br>
+                                            • Simulates virtual memory to be used for the Von Neumann architecture
+                                            system.<br>
+                                            • Programmed functionality to read files, interpret headers, fetch
+                                            instructions, handle memory operations, and execute machine code.<br>
+                                            • Implemented robust error handling to manage invalid instructions, ensuring
+                                            stability and accuracy.
                                         </p>
                                     </div>
                                     <!-- <img class="img-fluid" src="/assets/y86_example.png" alt="..." /> -->
