--- a/resume.html
+++ b/resume.html
@@ -112,14 +112,14 @@
                     </section>
                     <!-- Education Section-->
                     <section>
-                        <h2 class="text-secondary fw-bolder mb-4">Education</h2>
+                        <h2 class="text-primary fw-bolder mb-4">Education</h2>
                         <!-- Education Card 1-->
                         <div class="card shadow border-0 rounded-4 mb-5">
                             <div class="card-body p-5">
                                 <div class="row align-items-center gx-5">
                                     <div class="col text-center text-lg-start mb-4 mb-lg-0">
                                         <div class="bg-light p-4 rounded-4">
-                                            <div class="text-secondary fw-bolder mb-2">2022 - Present</div>
+                                            <div class="text-primary fw-bolder mb-2">2022 - Present</div>
                                             <div class="mb-2">
                                                 <div class="small fw-bolder">James Madison University</div>
                                                 <div class="small text-muted">Harrisonburg, VA</div>
@@ -131,7 +131,8 @@
                                         </div>
                                     </div>
                                     <div class="col-lg-8">
-                                        <div>Major: Computer Science <br>Minor: General Business<br>Expected Graduation: May 2026<br>GPA: 3.85</div>
+                                        <div>Major: Computer Science <br>Minor: General Business<br>Expected Graduation:
+                                            May 2026<br>GPA: 3.85</div>
                                     </div>
                                 </div>
                             </div>
@@ -171,7 +172,7 @@
                                         <div
                                             class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
                                             <i class="bi bi-tools"></i></div>
-                                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Professional
+                                        <h3 class="fw-bolder mb-0"><span class="text-primary d-inline">Professional
                                                 Skills</span></h3>
                                     </div>
                                     <div class="row row-cols-1 row-cols-md-3 mb-4">
@@ -209,7 +210,7 @@
                                         <div
                                             class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
                                             <i class="bi bi-code-slash"></i></div>
-                                        <h3 class="fw-bolder mb-0"><span class="text-gradient d-inline">Languages</span>
+                                        <h3 class="fw-bolder mb-0"><span class="text-primary d-inline">Languages</span>
                                         </h3>
                                     </div>
                                     <div class="row row-cols-1 row-cols-md-3 mb-4">
