Fixed issues with buttons

--- a/index.html
+++ b/index.html
@@ -381,9 +381,9 @@
                             </p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
                                 <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
-                                <a class="text-gradient" href="https://www.linkedin.com/in/ben-glass-3a770029b"><i
+                                <a class="text-gradient" href="https://www.linkedin.com/in/ben-glass-3a770029b" target="_blank"><i
                                         class="bi bi-linkedin"></i></a>
-                                <a class="text-gradient" href="https://github.com/BenGlass6/BenGlass6.github.io.git"><i
+                                <a class="text-gradient" href="https://github.com/BenGlass6" target="_blank"><i
                                         class="bi bi-github"></i></a>
                             </div>
                         </div>
