new way to contact me!

--- a/index.html
+++ b/index.html
@@ -381,8 +381,8 @@
                             </p>
                             <div class="d-flex justify-content-center fs-2 gap-4">
                                 <!-- <a class="text-gradient" href="#!"><i class="bi bi-twitter"></i></a> -->
-                                <a class="text-gradient" href="https://www.linkedin.com/in/ben-glass-3a770029b" target="_blank"><i
-                                        class="bi bi-linkedin"></i></a>
+                                <a class="text-gradient" href="https://www.linkedin.com/in/ben-glass-3a770029b"
+                                    target="_blank"><i class="bi bi-linkedin"></i></a>
                                 <a class="text-gradient" href="https://github.com/BenGlass6" target="_blank"><i
                                         class="bi bi-github"></i></a>
                             </div>
@@ -398,13 +398,10 @@
             <div class="row align-items-center justify-content-between flex-column flex-sm-row">
             </div>
             <!-- <div class="col-auto"><div class="small m-0">Copyright &copy; BenGlass.github.io 2024</div></div> -->
-            <div class="col-auto">
-                <!-- <a class="small" href="#!">Privacy</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Terms</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a> -->
-                <div class="text-center">Contact me at: benglass60@gmail.com</div>
+            <div class="col-auto text-center">
+                <a class="btn btn-primary px-4 py-3 " href="https://forms.gle/QvufB6zGP67XtkY49" target="_blank">
+                    Contact Me
+                </a>
             </div>
         </div>
         </div>
