--- a/projects.html
+++ b/projects.html
@@ -129,7 +129,10 @@
             <div class="container px-5 my-5">
                 <div class="text-center">
                     <h2 class="display-4 fw-bolder mb-4">Let's build something together</h2>
-                    <p>Contact me at: benglass60@gmail.com</p>
+                    <a class="btn btn-primary px-4 py-3" href="https://forms.gle/QvufB6zGP67XtkY49" target="_blank">
+                        Contact Me
+                    </a>
+                    <!-- <p>Contact me at: benglass60@gmail.com</p> -->
                     <!-- <a class="btn btn-outline-light btn-lg px-5 py-3 fs-6 fw-bolder" href="contact.html">Contact me</a> -->
                 </div>
             </div>
