--- a/resume.html
+++ b/resume.html
@@ -54,7 +54,8 @@
                             <h2 class="text-primary fw-bolder mb-0">Experience</h2>
                             <!-- Download resume button-->
                             <!-- Note: Set the link href target to a PDF file within your project-->
-                            <a class="btn btn-primary px-4 py-3" href="/assets/Ben_Glass_Online_Resume.pdf" target="_blank">
+                            <a class="btn btn-primary px-4 py-3" href="/assets/Ben_Glass_Online_Resume.pdf"
+                                target="_blank">
                                 <div class="d-inline-block bi bi-download me-2"></div>
                                 See Resume
                             </a>
@@ -171,7 +172,8 @@
                                     <div class="d-flex align-items-center mb-4">
                                         <div
                                             class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
-                                            <i class="bi bi-tools"></i></div>
+                                            <i class="bi bi-tools"></i>
+                                        </div>
                                         <h3 class="fw-bolder mb-0"><span class="text-primary d-inline">Professional
                                                 Skills</span></h3>
                                     </div>
@@ -209,7 +211,8 @@
                                     <div class="d-flex align-items-center mb-4">
                                         <div
                                             class="feature bg-primary bg-gradient-primary-to-secondary text-white rounded-3 me-3">
-                                            <i class="bi bi-code-slash"></i></div>
+                                            <i class="bi bi-code-slash"></i>
+                                        </div>
                                         <h3 class="fw-bolder mb-0"><span class="text-primary d-inline">Languages</span>
                                         </h3>
                                     </div>
@@ -251,14 +254,11 @@
     <!-- Footer-->
     <footer class="bg-white py-4 mt-auto">
         <div class="container px-5">
-            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                <!-- <div class="col-auto"><div class="small m-0">Copyright &copy; Your Website 2023</div></div> -->
-                <div class="col-auto">
-                    <!-- <a class="small" href="#!">Privacy</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Terms</a>
-                        <span class="mx-1">&middot;</span>
-                        <a class="small" href="#!">Contact</a> -->
+            <div class="row align-items-center justify-content-center">
+                <div class="col-auto text-center">
+                    <a class="btn btn-primary px-4 py-3" href="https://forms.gle/QvufB6zGP67XtkY49" target="_blank">
+                        Contact Me
+                    </a>
                 </div>
             </div>
         </div>
