add linkedin and github

--- a/index.html
+++ b/index.html
@@ -81,8 +81,17 @@
                                 &nbsp;I provide quality work with an attention to detail and and
                                 emphasis
                                 on the big picture.</p>
-                                <a href="#resume-header" class="btn btn-primary">Resume</a>
-                                <a href="#projects-header" class="btn btn-outline-secondary">Projects</a>
+
+                                <div style="display: flex; justify-content: space-evenly;">
+                                    <a href="#resume-header" class="btn btn-primary">Resume</a>
+                                    <a href="#projects-header" class="btn btn-outline-secondary">Projects</a>
+
+                                    <a class="btn btn-outline-secondary"
+                                        href="https://www.linkedin.com/in/ben-glass-3a770029b"
+                                        target="_blank">LinkedIn</a>
+                                    <a class="btn btn-outline-secondary" href="https://github.com/BenGlass6"
+                                        target="_blank">GitHub</a>
+                                </div>
                         </div>
                     </div>
                 </div>
