Refine buttons and spacing

--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
                 </div>
 
                 <div class="col-12 col-md-5 col-lg-4 mb-4 d-flex">
-
                     <div class="card">
                         <div class="card-body">
                             <h3 class="card-title">Computer Science Student</h3>
@@ -82,16 +81,24 @@
                                 emphasis
                                 on the big picture.</p>
 
-                                <div style="display: flex; justify-content: space-evenly;">
-                                    <a href="#resume-header" class="btn btn-primary">Resume</a>
-                                    <a href="#projects-header" class="btn btn-outline-secondary">Projects</a>
+                        </div>
+                    </div>
+                </div>
 
-                                    <a class="btn btn-outline-secondary"
-                                        href="https://www.linkedin.com/in/ben-glass-3a770029b"
-                                        target="_blank">LinkedIn</a>
-                                    <a class="btn btn-outline-secondary" href="https://github.com/BenGlass6"
-                                        target="_blank">GitHub</a>
-                                </div>
+                <div class="col-12 col-md-5 col-lg-4 mb-4 d-flex">
+                    <div class="card" style="max-width: 80%; margin-left: auto; margin-right: auto;">
+                        <div class="card-body">
+                            <div id="front-buttons">
+                                <a href="#resume-header" class="btn btn-primary">Resume</a>
+                                <a href="#projects-header" class="btn btn-outline-secondary">Projects</a>
+                                <a class="btn btn-outline-secondary"
+                                    href="https://www.linkedin.com/in/ben-glass-3a770029b" target="_blank">LinkedIn</a>
+                                <a class="btn btn-outline-secondary" href="https://github.com/BenGlass6"
+                                    target="_blank">GitHub</a>
+                                <a class="btn btn-primary" href="https://forms.gle/QvufB6zGP67XtkY49" target="_blank">
+                                    Contact Me
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -112,7 +119,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
                         <div class="card-body">
                             <h3>Technical Intern</h3>
@@ -137,7 +144,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
                         <div class="card-body">
                             <h3>Research Assistant</h3>
@@ -157,7 +164,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
                         <div class="card-body">
                             <h3>Comptetitve Programmer</h3>
@@ -178,7 +185,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
                         <div class="card-body">
                             <h3>Tour Guide</h3>
@@ -209,7 +216,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
                         <img src="" class="card-img-top" alt="Project photo">
                         <div class="card-body">
@@ -229,7 +236,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
                         <img src="images/DNS.png" class="card-img-top" alt="DNS filtering diagram">
                         <div class="card-body">
@@ -250,7 +257,7 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
                         <img src="images/jmuvies_screenshot.png" class="card-img-top" alt="The JM'Uvies search page">
                         <div class="card-body">
@@ -269,9 +276,9 @@
                     </div>
                 </div>
 
-                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
-                        <img src="" class="card-img-top" alt="Project photo">
+                        <img src="images/headshot-smaller.png" class="card-img-top" alt="Smaller headshot of Ben">
                         <div class="card-body">
                             <h4>Personal Website</h4>
                             <h5>JavaScript, HTML, CSS, Bootstrap</h5>
