Add nav buttons

--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#projects-header">Projects</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://forms.gle/QvufB6zGP67XtkY49" target="_blank">Contact Me</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/in/ben-glass-3a770029b"
+                            target="_blank">LinkedIn</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/BenGlass6" target="_blank">GitHub</a>
+                    </li>
                 </ul>
             </div>
         </div>
