Add shop-buddy card

--- a/index.html
+++ b/index.html
@@ -286,22 +286,25 @@
                     </div>
                 </div>
 
+                <!-- Add link to Shop-Buddy -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
-                    <div class="card">
-                        <img src="images/headshot-smaller.png" class="card-img-top" alt="Smaller headshot of Ben">
-                        <div class="card-body">
-                            <h4>Personal Website</h4>
-                            <h5>JavaScript, HTML, CSS, Bootstrap</h5>
-                            <h6><em>Summer 2025 (Ongoing)</em></h6>
-                            <p class="card-text">
-                            <ul>
-                                <li>A personal website to demonstrate my capability as a programmer.</li>
-                                <li>Contains a clean, accessible, and mobile-friendly user interface.</li>
-                                <li>Hosts copies of several personal projects.</li>
-                            </ul>
-                            </p>
+                    <a href="" style="text-decoration: none;">
+                        <div class="card">
+                            <img src="" class="card-img-top" alt="Shop-Buddy user interface">
+                            <div class="card-body">
+                                <h4>Shop-Buddy</h4>
+                                <h5>JavaScript, HTML, CSS, Bootstrap</h5>
+                                <h6><em>Spring 2025</em></h6>
+                                <p class="card-text">
+                                <ul>
+                                    <li>Interactive online shopping user interface.</li>
+                                    <li>Fetches products from a database and stores persistent data using CRUD.</li>
+                                    <li>Creates a print-friendly shopping list from the user's shopping cart.</li>
+                                </ul>
+                                </p>
+                            </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
 
             </div>
