add project photos

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
                         <div class="card-body">
-                            <h3>Comptetitve Programmer</h3>
+                            <h3>Competitive Programmer</h3>
                             <h4>JMU Competitive Programming Club</h4>
                             <h5>Harrisonburg, VA</h5>
                             <h6><em>August 2023 - Present</em></h6>
@@ -228,7 +228,7 @@
 
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
                     <div class="card">
-                        <img src="" class="card-img-top" alt="Project photo">
+                        <img src="images/tui.png" class="card-img-top" alt="Project photo">
                         <div class="card-body">
                             <h4>Embedded Programming Language Spreadsheet</h4>
                             <h5>Ruby</h5>
@@ -288,23 +288,21 @@
 
                 <!-- Add link to Shop-Buddy -->
                 <div class="col-12 col-sm-6 col-md-4 col-lg-3 mb-4 d-flex">
-                    <a href="" style="text-decoration: none;">
-                        <div class="card">
-                            <img src="" class="card-img-top" alt="Shop-Buddy user interface">
-                            <div class="card-body">
-                                <h4>Shop-Buddy</h4>
-                                <h5>JavaScript, HTML, CSS, Bootstrap</h5>
-                                <h6><em>Spring 2025</em></h6>
-                                <p class="card-text">
-                                <ul>
-                                    <li>Interactive online shopping user interface.</li>
-                                    <li>Fetches products from a database and stores persistent data using CRUD.</li>
-                                    <li>Creates a print-friendly shopping list from the user's shopping cart.</li>
-                                </ul>
-                                </p>
-                            </div>
+                    <div class="card">
+                        <img src="images/shop-buddy-square.png" class="card-img-top" alt="Shop-Buddy user interface">
+                        <div class="card-body">
+                            <h4>Shop-Buddy</h4>
+                            <h5>JavaScript, HTML, CSS, Bootstrap</h5>
+                            <h6><em>Spring 2025</em></h6>
+                            <p class="card-text">
+                            <ul>
+                                <li>Interactive online shopping user interface.</li>
+                                <li>Fetches products from a database and stores persistent data using CRUD.</li>
+                                <li>Creates a print-friendly shopping list from the user's shopping cart.</li>
+                            </ul>
+                            </p>
                         </div>
-                    </a>
+                    </div>
                 </div>
 
             </div>
